# calculate

./: README.md  pyproject.toml
src/Calculate-asmd/: main.py
src/Calculate_asmd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
