[project]
name = "calculate"
version = "0.0.1"
authors = [
  { name="Suyash Sonkesaria", email="suyashsonkesaria@gmail.com" },
]
description = "Package to calculate addition, subtraction, multiplication and divsion"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/suyashsonkesaria/Python-Packages/calculate"
"Bug Tracker" = "https://github.com/suyashsonkesaria/Python-Packages/calculate"